tests/fail/semantic/infixExp-3.tiger
let
      var x : String
in
      x := "Hello" <> "Bye"
end
